# CTris

./: .gitignore  CMakeLists.txt  README.md  define.h  exempleprof.c  main.c  main.h  tetrimino.c  tetrimino.h  window.c
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
src/: ctris.c  ctris.h  tetrimino.c  tetrimino.h
